# cookiecutter-python-cli

./: cookiecutter.json
hooks/: pre_gen_project.py
{{ cookiecutter.project_slug }}/.github/workflows/: pre-commit-update.yml
{{ cookiecutter.repository_name }}/: .editorconfig  .pre-commit-config.yaml  README.rst  pyproject.toml  setup.py
{{ cookiecutter.repository_name }}/.github/workflows/: lint.yml  pre-commit-update.yml  test.yml
{{ cookiecutter.repository_name }}/requirements/: dev.txt  test.txt
{{ cookiecutter.repository_name }}/tests/: test_{{ cookiecutter.package_name }}.py
{{ cookiecutter.repository_name }}/{{ cookiecutter.package_name }}/: cli.py
